--- a/MID_PROJECT/MID_PROJECT/Web.config
+++ b/MID_PROJECT/MID_PROJECT/Web.config
@@ -58,6 +58,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="MIDEntities" connectionString="metadata=res://*/Models.database.UserDetails.csdl|res://*/Models.database.UserDetails.ssdl|res://*/Models.database.UserDetails.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3K9LBHH;initial catalog=MID;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MIDEntities1" connectionString="metadata=res://*/Models.database.MID.csdl|res://*/Models.database.MID.ssdl|res://*/Models.database.MID.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3K9LBHH;initial catalog=MID;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
